--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-/* * {
-  box-sizing: border-box;
-} */
 #navbar,
 #footer_hr_line {
   display: none;
@@ -41,6 +38,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  width: 100%;
+
+  /* height: 100%; */
 }
 
 #name {
@@ -116,6 +117,8 @@ a {
 }
 
 .grid-container {
+  height: 100%;
+  width: 100%;
   margin-top: 24px;
   display: grid;
   grid-template-columns: 100%;
@@ -162,7 +165,7 @@ a {
   }
 
   #name {
-    margin-top: 80px;
+    margin-top: 160px;
     margin-bottom: 0;
   }
 
@@ -198,8 +201,10 @@ a {
     font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 15px;
+
+    /* line-height: 32px; */
+    width: 100%;
 
     /* text-align: center; */
     color: #3a4a42;
@@ -212,10 +217,11 @@ a {
     background-color: #ebf0ee;
     margin-top: 24px;
     width: 32%;
+  }
 
-    /* display: grid;
-
-    grid-template-rows: auto; */
+  .space {
+    height: 110px !important;
+    box-sizing: border-box;
   }
 
   #about_me {
@@ -243,8 +249,6 @@ a {
     width: 60%;
     margin-top: 10px;
     margin-right: 30px;
-
-    /* text-align: justify !important; */
   }
 
   .stretch {
@@ -253,14 +257,6 @@ a {
 
   .form_width {
     width: 100%;
-  }
-
-  #form {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
   }
 
   .button_left {
@@ -288,11 +284,15 @@ a {
 .grid-item1 {
   background-color: #ebf0ee;
   height: 200px;
+
+  /* width: 100%; */
 }
 
 .grid-item {
   border: 2px solid  #ebf0ee;
-  height: 200px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 222px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -334,13 +334,11 @@ a {
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 5px;
 }
 
-.button_flex2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 12px;
+.boxed_flex_margin {
+  margin-bottom: 72px;
 }
 
 .button2 {
@@ -348,14 +346,14 @@ a {
   border-radius: 4px;
   background-color: #36b37f;
   color: white;
-  height: 40px;
+  height: 30px;
   text-align: center;
   font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
-  padding: 0 20px;
+  padding: 0 8px;
 }
 
 /* About me */
@@ -403,6 +401,7 @@ a {
   font-size: 24px;
   line-height: 32px;
   color: #344563;
+  margin: 40px 0 0 0;
 }
 
 .lang_boxed {
@@ -417,13 +416,14 @@ a {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-align: center;
-  padding: 5px 2.5px;
+  padding: 5px 12px;
   border-radius: 8px;
   margin-top: 10px;
 }
 
 .space {
-  height: 30px;
+  height: 64px;
+  box-sizing: border-box;
 }
 
 .center1 {
@@ -433,6 +433,11 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+}
+
+.button3.email_flex {
+  padding: 0 12px;
+  margin: 0 0 0;
 }
 
 .comment {
@@ -451,6 +456,15 @@ input {
   box-sizing: border-box;
   border: 1px solid #d0d9d4;
   border-radius: 4px;
+}
+
+#form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #contact_form_img {
