--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
-#header_display{
+#header_display {
   width: 100%;
   height: 100%;
 }
 
 #menu {
-  display: none ;
+  display: none;
   height: 400px;
   width: 100%;
-  background-color: #F7F7F9;
+  background-color: #f7f7f9;
 }
+
 #menu_flex {
   display: flex;
   flex-direction: column;
@@ -20,31 +21,32 @@
 #menulist {
   height: 350px;
   width: 100%;
-  background-color: #FFFFFF;
-  border-radius: 0px 0px 40px 40px;
+  background-color: #fff;
+  border-radius: 0 0 40px 40px;
 }
-#menu_liststyle a {
- text-decoration: none;
- color: #3A4A42;
 
+.menu_list {
+  text-decoration: none;
+  color: #3a4a42;
 }
-#menu_liststyle{
+
+#menu_liststyle {
   list-style: none;
   font-family: Inter, Arial, Helvetica, sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 32px;
-line-height: 44px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
 }
 
-#img_shape{
+#img_shape {
   margin-bottom: 5px;
 }
+
 #close_icon {
   float: right;
   margin-right: 20px;
 }
-
 
 #navbar,
 #footer_hr_line {
