--- a/styles.css
+++ b/styles.css
@@ -331,6 +331,15 @@ a {
     background: #008552;
     border-radius: 4px;
   }
+
+  /* desktop popup window */
+
+  .pop_button_center{
+    display: none !important;
+  }
+  .desk_pop_btn {
+    display: inline !important;
+  }
 }
 
 .grid-item1 {
@@ -563,3 +572,149 @@ input {
   text-align: center;
   padding-left: 50px;
 }
+
+
+
+/* Popup window */
+.project_background {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  background: #c1c7d0c2;
+}
+
+.project-container {
+  width: 80%;
+  height: auto;
+  margin: 10%;
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+.img_fit {
+  width: 90%;
+  height: 50%;
+  margin: 4% 5% 0% 5%;
+}
+
+.snapshoot {
+  width: 100%;
+  height: 40%;
+}
+
+.project_tittle {
+  color: #172b4d;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  margin-top: 6px;
+}
+
+.title_tech {
+  height: auto;
+  width: 100%;
+
+  /* margin: 5% 0% 0% 2%; */
+}
+
+.title_tech_flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin: 1% 0% 0% 5%;
+}
+
+.desk_pop_btn {
+  display: none;
+}
+
+.boxed_flex_pop {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.boxed_pop {
+  border: none;
+  background-color: #ebf0ee;
+  color: #3a4a42;
+  height: 16px;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  padding: 5px 10px;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
+.description {
+  margin: 5% 5% 0% 5%;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+  padding-bottom: 10px;
+}
+
+.poplinks {
+  height: auto;
+  width: 340px;
+  margin: 5% 0% 0% 5%;
+  gap: 5px;
+  display: flex;
+}
+
+  .pop_button_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* .popclick {
+  width: auto;
+} */
+
+  .pop_icon {
+    width: 25px;
+    height: 25px;
+  }
+
+  .pop_button {
+    border: none;
+    border-radius: 4px;
+    background-color: #36b37f;
+    color: white;
+    height: auto;
+    text-align: center;
+    font-family: Inter, Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
+    padding: 20px 0;
+    transition: all;
+    transition-duration: 2s;
+    width: 158px;
+    margin-bottom: 20px;
+    text-decoration: none;
+  }
+
+  
+
