--- a/styles.css
+++ b/styles.css
@@ -715,5 +715,13 @@ input {
     text-decoration: none;
   }
 
+  .close {
+    margin: 0% 5% 0% 5%;
+    display: flex;
+    flex-direction: row-reverse;
+    padding-top: 40px;
+  }
+
+
   
 
