--- a/styles.css
+++ b/styles.css
@@ -752,3 +752,11 @@ input {
 }
 
 /* Email Error message */
+#error {
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ef0707;
+}
