--- a/styles.css
+++ b/styles.css
@@ -217,8 +217,12 @@ a {
   }
 
   #name {
-    margin-top: 160px;
+    margin-top: 100px;
     margin-bottom: 0;
+  }
+
+  .story {
+    width: 60%;
   }
 
   .green_box,
